--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"bcryptjs": "^2.4.3",
 		"body-parser": "^1.19.2",
 		"connect-mongodb-session": "^3.1.1",
+		"csurf": "^1.11.0",
 		"ejs": "^3.1.6",
 		"express": "^4.17.3",
 		"express-handlebars": "^6.0.3",
